--- a/content/projects/index.html
+++ b/content/projects/index.html
@@ -7,6 +7,12 @@
         <a href="https://modrinth.com/user/tay">Modrinth</a> - Mods, Modpacks,
         Datapacks, etc
       </li>
+      <li>
+        <a href="https://discord.gg/cyS2TpmYpr">Rose Haven</a> - GTA V RP Server on FiveM
+      </li>
+      <li>
+        <a href="https://discord.gg/cNJRgCfSNY">Haven Network</a> - Gaming Network (Minecraft & Other)
+      </li>
       <!--<li><a href="https://link-here.tld">put text here to kinda give it a text yknow..</a></li>-->
     </ul>
   </div>
