Setup a page for my characters on FiveM, and js.

--- a/content/pages/index.html
+++ b/content/pages/index.html
@@ -9,7 +9,9 @@
       <li><a href="/discord">Discord</a> - Redirects you to my Discord.</li>
       <li><a href="/pages">Pages</a> - Takes you to this page.</li>
       <li><a href="/credits">Credits</a> - Takes you to my credits page.</li>
-      <li><a href="/readme">README</a> - Takes you to my README page.</li>
+      <li>
+        <a href="/characters">Characters</a> - Takes you to my characters page.
+      </li>
       <li>
         <a href="https://docs.mysty.one/">GitBook</a> - Takes you to my GitBook
         website.
