Updated pause buttons on about, etc.

--- a/content/about/index.html
+++ b/content/about/index.html
@@ -175,7 +175,7 @@
             document.getElementById("aboutpauseBtn").innerText = "⏸";
           } else {
             bgVideo.pause();
-            document.getElementById("aboutpauseBtn").innerText = "⏯";
+            document.getElementById("aboutpauseBtn").innerText = "⏵";
           }
         };
 
