Fixed buttons on about, Got removed when testing..

--- a/content/about/index.html
+++ b/content/about/index.html
@@ -92,7 +92,6 @@
               <h1 style="display: inline">
                 Hiya, I am <span id="name"></span>
               </h1>
-
               <iframe
                 width="570"
                 height="212"
@@ -101,7 +100,14 @@
                 allowfullscreen="false"
                 style="margin-left: 0px"
               ></iframe>
-
+							<div id="images">
+                <a href="https://discord.gg/gjypyNkPPp" target="_blank"><img src="/assets/imgs/socials/haven.png" class="social-logo" alt="My Community Discord"></a>
+								<a href="https://discord.com/users/1050531216589332581" target="_blank"><img src="/assets/imgs/socials/discord.png" class="social-logo" alt="My Discord Profile"></a>
+								<a href="https://github.com/tayrp" target="_blank"><img src="/assets/imgs/socials/github.png" class="social-logo" alt="My Github"></a>
+								<a href="https://www.last.fm/user/MystixMew" target="_blank"><img src="/assets/imgs/socials/lastfm.png" class="social-logo" alt="My Last.fm"></a>
+								<a href="https://www.youtube.com/@MystixMew?sub_confirmation=1" target="_blank"><img src="/assets/imgs/socials/youtube.png" class="social-logo" alt="My YouTube"></a>
+							</div>
+						</div>
               <div id="images"></div>
             </div>
 
