Updated credits, added buttons, portfolio, and css

--- a/content/pages/index.html
+++ b/content/pages/index.html
@@ -17,6 +17,10 @@
         website.
       </li>
       <li>
+        <a href="https://mystixmew.carrd.co/#work">Carrd</a> - Takes you to my Carrd
+        website (Portfolio).
+      </li>
+      <li>
         <a href="https://tayrp.substack.com/">Blog</a> - Takes you to my
         Substack. (Inactive)
       </li>
