--- a/content/credits/index.html
+++ b/content/credits/index.html
@@ -2,6 +2,7 @@
     <div class="bgbox">
         <p>Here is where credits will be, such as profile pictures, assets, website assets, etc.</p>
         <li><a href="https://picrew.me/en/image_maker/1487318">ぺけぺけぺけⅡ</a> - Credits to <a href="https://profcard.info/u/3JBo4MNkznbJV3CILaI1otWJ5uI3">旻 (Nichibun)</a> for some profile pictures I use.</li>
+        <li><a href="https://picrew.me/en/image_maker/2307052">ふわふわ鱈メーカー4</a> - Credits to <a href="https://x.com/Zr6Ov">Zr6Ov</a> for some of the profile pictures I use, For PNGTuber, etc.</li>
         <li><a href=""></a> - Credits to <a href="">BlazingBRO</a> for my MinecraftLIVE style profile picture.</li>
         <li><a href="https://www.vecteezy.com/">Vecteezy</a> - Credits to Vecteezy for the <a href="https://www.vecteezy.com/vector-art/27207156-hand-drawn-flat-halloween-night-background">october background</a> I used in 2024, As well as for the current background.</li>
       </div>
