idk what to put rn

--- a/content/about/index.html
+++ b/content/about/index.html
@@ -185,7 +185,7 @@
           }
         };
 
-        const names = ["Valerie", "Tee", "Riya", "Rhea", "Kara"];
+        const names = ["Valerie"];
         const nameElement = document.getElementById("name");
         let index = 0;
         let currentName = "";
