--- a/content/pages/index.html
+++ b/content/pages/index.html
@@ -17,8 +17,8 @@
         website.
       </li>
       <li>
-        <a href="https://mystixmew.carrd.co/#work">Carrd</a> - Takes you to my Carrd
-        website (Portfolio).
+        <a href="https://mystixmew.carrd.co/#work">Carrd</a> - Takes you to my
+        Carrd website (Portfolio).
       </li>
       <li>
         <a href="https://tayrp.substack.com/">Blog</a> - Takes you to my
