--- a/content/portfolio/index.html
+++ b/content/portfolio/index.html
@@ -1,11 +1,16 @@
 <main>
-    <div class="about">
-      <div class="bgbox">
-        <p>Portfolio coming soon..</p>
-        <p>For now just check my Carrd</p>
-        <p>Note that my Carrd does not have all the information it should currently.</p>
-        <li><a href="https://mystixmew.carrd.co/#work">Carrd Portfolio</a> - Takes you to my Carrd portfolio</li>
-      </div>
+  <div class="about">
+    <div class="bgbox">
+      <p>Portfolio coming soon..</p>
+      <p>For now just check my Carrd</p>
+      <p>
+        Note that my Carrd does not have all the information it should
+        currently.
+      </p>
+      <li>
+        <a href="https://mystixmew.carrd.co/#work">Carrd Portfolio</a> - Takes
+        you to my Carrd portfolio
+      </li>
     </div>
-  </main>
-  
+  </div>
+</main>
